--- a/force-app/main/default/classes/mytest.cls
+++ b/force-app/main/default/classes/mytest.cls
@@ -4,7 +4,7 @@ private class mytest {
     @isTest
     static void myUnitTest() {
         myclass demo = new myclass();
-		system.debug('Test');
+		system.debug('Test1');
         System.assertEquals(demo.getAppVersion(), '1.0.0');
     }
 }
