--- a/force-app/main/default/classes/mytest.cls
+++ b/force-app/main/default/classes/mytest.cls
@@ -4,6 +4,7 @@ private class mytest {
     @isTest
     static void myUnitTest() {
         myclass demo = new myclass();
+		System.debug('123');
         System.assertEquals(demo.getAppVersion(), '1.0.0');
     }
 }
